--- a/style2.css
+++ b/style2.css
@@ -84,7 +84,7 @@
   overflow: hidden;
   object-fit: cover;
 }
-.project-showcase {
+.heading {
   color: #000000;
   text-align: left;
   font-family: "Inter-Bold", sans-serif;
